--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,20 @@
         <maven-surefire-plugin.version>2.12</maven-surefire-plugin.version>
         <maven-surefire-report-plugin.version>${maven-surefire-plugin.version}</maven-surefire-report-plugin.version>
     </properties>
+    <developers>
+        <developer>
+            <id>stefanbrausch</id>
+            <name>Stefan Brausch</name>
+            <email>stefan.brausch@1und1.de</email>
+            <timezone>+1</timezone>
+        </developer>
+        <developer>
+            <id>kstutz</id>
+            <name>Kathi Stutz</name>
+            <email>logfilesizechecker@kathistutz.de</email>
+            <timezone>+1</timezone>
+        </developer>
+    </developers>
     <build>
         <plugins>
             <plugin>
